--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,43 @@
-#container {
-  text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-content {
+  --background: var(--ion-color-tertiary); //si nose tiene el -- no funciona https://ionicframework.com/docs/api/badge#css-custom-properties
+  font-family: "Garamond", Times, serif;
+}
+ion-slides {
+  background-color: white;
+  height: 100%;
+  max-width: 800px;
+}
+.swiper-slide {
+  flex-direction: column;
+  margin-bottom: 64px;
+  background-color: white;
+}
+ion-slide > h1,
+h2 {
+  margin: 0 0 0 0;
+  color: var(--ion-color-primary);
+}
+ion-slide > p {
+  font-style: garamond;
+  font-size: 22px;
+  padding: 0.1em 1em 1em 1em;
+  text-align: justify;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+ion-slide > ion-icon {
+  color: var(--ion-color-primary);
+  font-size: 48px;
+}
+ion-slide > ion-icon[name="close"] {
+  float: right;
+  color: var(--ion-color-primary);
+  font-size: 48px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+ion-slide > img {
+  max-height: 50%;
+  max-width: 60%;
+  margin: 10px 0;
 }
