Solucionar error con corodova

--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -49,5 +49,5 @@
     </ion-grid>
   </ion-card-content>
 </ion-card>
-<ion-button expand="block" (click)= "showNotification()"></ion-button>
+<ion-button expand="block" (click)= "doNotification()">Notificacion</ion-button>
 </ion-content>
